IMPLEMENT INVENTORY & SKU VARIANTS, REDIS CART, ORDER STATE MACHINE, STOCK CONCURRENCY CONTROL, REDIS CONFIG, JWT ENTRY POINT, AND UNIFIED EXCEPTION HANDLING