@@ -1,7 +1,5 @@
 package com.hexamarket.code.config;
 
-import java.util.stream.Collectors;
-
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -20,13 +18,12 @@ public class UserDetailService implements UserDetailsService {
 
 	@Override
 	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+
 		User user = userRepository.findByUsername(username)
 				.orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
-		return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(),
-				user.getIsActive(), true, // accountNonExpired
-				true, // credentialsNonExpired
-				true, // accountNonLocked
-				user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName()))
-						.collect(Collectors.toList()));
+
+		var authorities = user.getRoles().stream().map(role -> new SimpleGrantedAuthority(role.getName())).toList();
+
+		return CustomUserDetails.fromUser(user, authorities);
 	}
 }
